<resources>
    <string name="app_name" translatable="false">Book Store</string>
    <string name="title_home">Home</string>
    <string name="title_book">Books</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="text_search_hint_fragment_home">Search a popular books…</string>
    <string name="text_search_hint_fragment_cart">Search any book in your cart…</string>
    <string name="text_search_hint_activity_wishlist">Search your wishlisted books…</string>
    <string name="text_title_book_fragment">Book List</string>
    <string name="text_title_cart_fragment">Cart</string>
    <string name="text_title_profile_fragment">My Profile</string>
    <string name="text_placeholder_empty_book">Whoops, looks like we have\'nt prepared any books yet</string>
    <string name="text_placeholder_empty_wishlist">You have\'nt add any book to your wishlist</string>
    <string name="text_placeholder_empty_cart">Your shopping cart is empty</string>
    <string name="text_placeholder_empty_search_cart">We can\'t find this book in your cart</string>
    <string name="text_placeholder_empty_search">Sorry, we can\'t find this book</string>
    <string name="text_profile_name">User</string>
    <string name="text_profile_email">user@email.com</string>
    <string name="text_profile_menu_wishlist">My Wishlist</string>
    <string name="text_profile_menu_settings">Application Settings</string>
    <string name="text_profile_menu_about">About Application</string>
    <string name="text_title_profile_menu">Account</string>
    <string name="text_item_cart_book_price" translatable="false">Rp. %1$d</string>
    <string name="text_title_category_home">Book\'s Categories</string>
    <string name="text_button_signin">Sign In</string>
    <string name="text_title_activity_signin">Sign In to Book Store</string>
    <string name="text_hint_input_username">Username</string>
    <string name="text_hint_input_password">Password</string>
    <string name="text_title_activity_search">Search Books</string>
    <string name="text_title_activity_book_detail_footer">Buy This Book</string>
    <string name="button_text_add_to_cart">Add To Cart</string>
    <string name="button_text_remove_from_cart">Remove From Cart</string>
    <string name="button_text_checkout">Proceed To Checkout</string>
    <string name="text_book_price" translatable="false">Rp. %1$d</string>
    <string name="text_title_dialog_search_book_filter">Filter by Book Type</string>
    <string name="button_text_apply">Apply</string>
    <string name="checkbox_book_type_fiction">Fiction</string>
    <string name="checkbox_book_type_romance">Romance</string>
    <string name="checkbox_book_type_history">History</string>
    <string name="checkbox_book_type_science">Science</string>
    <string name="checkbox_book_type_horror">Horror</string>
    <string name="checkbox_book_type_art">Art</string>
    <string name="checkbox_book_type_non_fiction">Non-fiction</string>
    <string name="checkbox_book_type_psychology">Psychology</string>
    <string name="text_title_activity_wishlist">My Wishlist</string>
    <string name="text_title_activity_settings">Settings</string>
    <string name="text_title_language_activity_setting">Languages</string>
    <string name="text_row_setting_language">Application Language</string>
    <string name="text_card_filter_info">%1$d book type filtering are applied</string>
    <string name="text_title_dialog_about_application">About Application</string>
    <string name="text_about_application_version">Book Store Client version %1$s</string>
    <string name="text_about_application_description">This is a Book Store Client Android Application, intended for study purpose at Cilsy Sekolah Mobile Course 3.</string>
    <string name="button_text_visit_cilsy">Visit Cilsy Sekolah Mobile</string>
    <string name="text_title_total_price">Total Price:</string>
    <string name="text_title_activity_checkout">Checkout</string>
    <string name="button_confirm_checkout">Confirm Checkout</string>
    <string name="text_step_1_checkout">Step 1 of 2</string>
    <string name="text_title_fragment_checkout">Checkout your Cart</string>
    <string name="text_step_2_checkout">Step 2 of 2</string>
    <string name="text_title_fragment_payment">Set Up Payment</string>
    <string name="text_title_invoice_charge">Invoice Charge:</string>
    <string name="button_pay_now">Pay Now</string>
    <string name="text_title_payment_type">Payment Type</string>
    <string name="text_payment_type_bank_transfer">Bank Transfer</string>
    <string name="button_text_clear">Clear</string>
    <string name="text_title_invoice_detail">Invoice Detail</string>
    <string name="text_invoice_number">Number</string>
    <string name="text_equal">:</string>
    <string name="text_created_on">Created on</string>
    <string name="text_invoice_items">Items</string>
    <string name="button_text_done">Done</string>
    <string name="text_payment_success">We\'ve verify your payment, thanks for purchasing!</string>
    <string name="text_title_payment_success">Payment Successful</string>
    <string name="text_empty">-</string>
    <string name="dialog_cancel_payment">Are you sure want to cancel your payment? Your current cart will be discarded</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_title_activity_purchase_detail">Purchase Detail</string>
    <string name="text_title_invoice_number_activity_purchase_detail">Invoice Number</string>
    <string name="text_title_transaction_date_activity_purchase_detail">Transaction Date</string>
    <string name="text_title_items_activity_purchase_detail">Items</string>
    <string name="text_title_activity_purchase_history">Purchase History</string>
    <string name="text_placeholder_empty_purchase_history">Your purchase history is empty</string>
    <string name="text_profile_menu_purchase_history">Purchase History</string>
    <string name="text_placeholder_empty_search_purchase_history">We can\'t find this invoice number in your purchase history</string>
    <string name="text_search_hint_activity_purchase_history">Search a invoice number…</string>
</resources>
