<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/invoice_charge_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="@dimen/activity_padding">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_padding"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:includeFontPadding="false"
                    android:textAlignment="textStart"
                    android:text="@string/text_title_fragment_payment"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_step" />

                <TextView
                    android:id="@+id/text_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:includeFontPadding="false"
                    android:text="@string/text_step_2_checkout"
                    app:layout_constraintTop_toTopOf="@id/text_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/text_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/payment_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_padding"
                android:padding="@dimen/activity_padding">

                <TextView
                    android:id="@+id/text_title_payment_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:text="@string/text_title_payment_type"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:paddingTop="@dimen/activity_padding_half"
                    android:paddingStart="16dp"
                    android:paddingBottom="@dimen/activity_padding_half"
                    android:paddingEnd="16dp"
                    android:background="@drawable/background_payment_type"
                    android:foreground="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    app:layout_constraintTop_toBottomOf="@id/text_title_payment_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingStart="@dimen/activity_padding_half"
                        android:paddingEnd="@dimen/activity_padding_half"
                        android:fontFamily="@font/rubik"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/text_payment_type_bank_transfer"
                        app:buttonTint="@color/colorPrimary" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/invoice_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_marginBottom="@dimen/activity_padding">

                <TextView
                    android:id="@+id/text_title_invoice_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:text="@string/text_title_invoice_detail"
                    android:includeFontPadding="false"
                    android:layout_margin="@dimen/activity_padding"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TableLayout
                    android:id="@+id/table_invoice_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:layout_marginStart="@dimen/activity_padding"
                    android:layout_marginEnd="@dimen/activity_padding"
                    app:layout_constraintTop_toBottomOf="@id/text_title_invoice_detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TableRow android:layout_marginBottom="@dimen/activity_padding_half">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_invoice_number"
                            android:includeFontPadding="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_equal"
                            android:layout_marginStart="@dimen/activity_padding_half"
                            android:includeFontPadding="false" />

                        <TextView
                            android:id="@+id/text_invoice_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_empty"
                            android:layout_marginStart="@dimen/activity_padding_half"
                            android:includeFontPadding="false" />

                    </TableRow>

                    <TableRow android:layout_marginBottom="@dimen/activity_padding_half">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_created_on"
                            android:includeFontPadding="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_equal"
                            android:layout_marginStart="@dimen/activity_padding_half"
                            android:includeFontPadding="false" />

                        <TextView
                            android:id="@+id/text_invoice_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_empty"
                            android:layout_marginStart="@dimen/activity_padding_half"
                            android:includeFontPadding="false" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_invoice_items"
                            android:includeFontPadding="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/text_equal"
                            android:layout_marginStart="@dimen/activity_padding_half"
                            android:includeFontPadding="false" />

                    </TableRow>

                </TableLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_padding_half"
                    android:paddingStart="@dimen/activity_padding_half"
                    android:paddingBottom="@dimen/activity_padding_half"
                    android:paddingEnd="0dp"
                    android:clipToPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/table_invoice_detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/invoice_charge_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_title_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/text_title_invoice_charge"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_marginBottom="@dimen/activity_padding_half"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/button_pay"
            app:layout_constraintEnd_toStartOf="@id/text_total_price"
            app:layout_constraintBottom_toTopOf="@id/button_pay" />

        <TextView
            android:id="@+id/text_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:includeFontPadding="false"
            android:text="@string/text_empty"
            app:layout_constraintTop_toTopOf="@id/text_title_total_price"
            app:layout_constraintEnd_toEndOf="@id/button_pay"
            app:layout_constraintBottom_toBottomOf="@id/text_title_total_price" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:id="@+id/button_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pay_now"
            android:layout_margin="@dimen/activity_padding"
            android:enabled="false"
            app:icon="@drawable/ic_payment_white"
            app:iconGravity="textStart"
            app:iconPadding="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>